--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,12 @@
   ],
   "public" : true,
   "buildCommand" : "vite build",
-  "outputDirectory": "public"
+  "outputDirectory": "public",
+  "builds": [
+    {
+      "src": "api/*.php",
+      "use": "@vercel/php"
+    }
+  ]
 
 }
