--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-  "version" : 2,
-  "framework" : null,
-  "functions" : {
-    "api/index.php" : { "runtime" : "vercel-php@0.6.0" }
-  },
-  "routes" : [
-    {"src" : "/build/(.*)", "dest" : "/public/build/"},
-    {"src" : "/(.*)", "dest" : "/api/index.php"}
+  "version": 2,
+  "builds": [
+    { "src": "Dockerfile", "use": "@vercel/docker" }
   ],
-  "public" : true,
-  "buildCommand" : "vite build",
-  "outputDirectory": "public"
-
+  "routes": [
+    { "src": "/(.*)", "dest": "/public/index.php" }
+  ]
 }
